--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
           <div class="error-message"></div>
         </div>
         <div class="h-captcha text-center" data-sitekey="9e460eb7-9e03-4976-8d0e-39c05fc5feca" data-theme="dark"></div>
-        <div class="text-center"><button type="submit" onclick="validateForm(event)">Send Message<i class="fa-solid fa-message fa-fade"></i></button></div>
+        <div class="text-center"><button type="submit" onclick="validateForm(event)">Send Message</button></div>
       </form>
 
     </div>
