--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <!-- Pop Up element -->
       <div id="popup">
-        <span id="closeBtn" onclick="closePopup()"><i class="fa-solid fa-circle-xmark fa-beat"></i></span>
+        <span id="closeBtn" onclick="closePopup()"><i class="fa-solid fa-circle-xmark"></i></span>
         <img src="" alt="Pop up QR code">
       </div>    
 
