--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Davinci Resolve / PR / AE <i class="val">90%</i></span>
+            <span class="skill">Davinci Resolve / PR / AE / FCP<i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -368,6 +368,7 @@
               <li>Strong understanding of Music Theory and Musicianship.</li>
               <li>Proficient in parsing and analysing music score using programming language.</li>
               <li>Proficient in using software applications such as Davinci Resolve, Logic Pro, and Photoshop for video, music production, and photography.</li>
+              <li>Certified editor and color grader with Davinci Resolve by BMD</li>
               <li>Accomplished musician with 11 years of experience as principal cellist in a symphony orchestra.</li>
               <li>A dedicated video blogger with a following of 10K.</li>
             </ul>
@@ -446,7 +447,7 @@
             <h4>Certificates</h4>
             <p>
             <ul>
-              <li>Crash Course on Python, Using Python to interact with Operating System, Supervised Machine Learning: Regression and Classification</li>
+              <li>Crash Course on Python, Using Python to interact with Operating System, Supervised Machine Learning: Regression and Classification, Certified editor and color grader with Davinci Resolve by BMD</li>
             </ul>
             </p>
           </div>
