move dir for resume and apk file

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <a href="resume.pdf">See More in PDF</a>
+        <a href="assets/files/resume.pdf">See More in PDF</a>
       </div>
 
       <div class="row">
