update strava links

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
         <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.strava.com/athletes/111512399" class="Strava"><i class="fa-brands fa-strava"></i></a>
       </div>
 
       <!-- Pop Up element -->
@@ -659,6 +660,7 @@
               <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
               <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
               <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+              <a href="https://www.strava.com/athletes/111512399" class="Strava"><i class="fa-brands fa-strava"></i></a>
             </div>
           </div>
         </div>
