linkedin link update

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="social-links">
         <a href="https://github.com/Haozhe-Li" class="github"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.instagram.com/haozheli04/" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/haozhe-li-306742252/" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="htttps://www.linkedin.com/in/haozheli" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog" class="youtube"><i class="fa-brands fa-youtube"></i></a>
         <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
         <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
@@ -655,7 +655,7 @@
             <div class="social-links">
               <a href="https://github.com/Haozhe-Li" class="github"><i class="fa-brands fa-github"></i></a>
               <a href="https://www.instagram.com/haozheli04/" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/haozhe-li-306742252/" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="htttps://www.linkedin.com/in/haozheli" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
               <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog" class="youtube"><i class="fa-brands fa-youtube"></i></a>
               <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
               <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
