update hyperlink bug

--- a/portfolio-ai.html
+++ b/portfolio-ai.html
@@ -73,7 +73,7 @@
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
               <li><strong>Project URL</strong>: <a href="https://ai.haozheli.com" target="_blank">ai.haozheli.com</a></li>
-              <li><strong>User Guide</strong>: <a href="/docs/index.html">Read here</a></li>
+              <li><strong>User Guide</strong>: <a href="/docs/index.html" target="_blank">Read here</a></li>
             </ul>
 
             <p><a href="https://chatai.haozheli.com">ChatAI on Haozheli.com</a> offers you the opportunity to seamlessly use ChatGPT within mainland China. This website is built upon the open-source project <a href="https://github.com/pengzhile/pandora">Pandora</a> available on GitHub, with custom modifications and optimizations for deployment on <a href="https://www.haozheli.com">Haozheli.com</a>. We extend our heartfelt gratitude to the creators of the Pandora project for their invaluable support to this endeavor. Please note that this website is not an official service provided by OpenAI and exists purely for entertainment purposes.</p>
