--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Davinci Resolve / PR / AE / FCP<i class="val">90%</i></span>
+            <span class="skill">Video and Photo Editing<i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Photoshop / Luminar Neo / Affinity <i class="val">70%</i></span>
+            <span class="skill">Digital Signal Processing<i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -352,7 +352,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <a href="assets/files/resume.pdf">See More in PDF</a>
+        <a href="assets/files/haozheli_resume.pdf">See More in PDF</a>
       </div>
 
       <div class="row">
@@ -365,6 +365,7 @@
               <li>Skilled in embracing essential skills in programming, filming, and music production.</li>
               <li>Proficient in object-oriented programming languages such as Java, C++, and web development involving HTML.</li>
               <li>Experienced in machine learning using Python.</li>
+              <li>Proficient in DSP in Pure Data and Max.</li>
               <li>Built and maintained personal website at haozheli.com and studio's website welogstudio.com.</li>
               <li>Strong understanding of Music Theory and Musicianship.</li>
               <li>Proficient in parsing and analysing music score using programming language.</li>
@@ -522,7 +523,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/ai-preview1.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/ai-preview3.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>AI on Haozheli.com</h4>
               <p>Coding, Design</p>
