--- a/portfolio-ai.html
+++ b/portfolio-ai.html
@@ -61,6 +61,10 @@
                   <img src="assets/img/portfolio/ai-preview2.webp" width="720px" alt="poster">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ai-preview3.webp" width="720px" alt="poster">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -76,7 +80,7 @@
               <li><strong>User Guide</strong>: <a href="/docs/index.html" target="_blank">Read here</a></li>
             </ul>
 
-            <p><a href="https://chatai.haozheli.com">ChatAI on Haozheli.com</a> offers you the opportunity to seamlessly use ChatGPT within mainland China. This website is built upon the open-source project <a href="https://github.com/pengzhile/pandora">Pandora</a> available on GitHub, with custom modifications and optimizations for deployment on <a href="https://www.haozheli.com">Haozheli.com</a>. We extend our heartfelt gratitude to the creators of the Pandora project for their invaluable support to this endeavor. Please note that this website is not an official service provided by OpenAI and exists purely for entertainment purposes.</p>
+            <p><a href="https://chatai.haozheli.com">AI on Haozheli.com</a> integrates all the future AI technology in a single platform, including GPT and DALL-E. In addition, several presets and profiles have been developed to improve your workflow. At <a href="https://chatai.haozheli.com">AI on Haozheli.com</a>, you can easily access to openAI service from anywhere of the world, with the latest GPT-4 and GPT-3.5 Turbo Model. This project is powered by <a href="https://openai.com">OpenAI</a>, <a href="https://github.com/ourongxing/chatgpt-vercel">ChatGPT Vercel</a> and <a href="https://github.com/pengzhile/pandora">Pandora</a>.</p>
           </div>
 
         </div>
