--- a/portfolio-ai.html
+++ b/portfolio-ai.html
@@ -54,11 +54,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/ai-preview1.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/ai-preview2.webp" width="720px" alt="poster">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/ai-preview2.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/ai-preview1.webp" width="720px" alt="poster">
                 </div>
 
                 <div class="swiper-slide">
@@ -80,7 +80,7 @@
               <li><strong>User Guide</strong>: <a href="/docs/index.html" target="_blank">Read here</a></li>
             </ul>
 
-            <p><a href="https://chatai.haozheli.com">AI on Haozheli.com</a> integrates all the future AI technology in a single platform, including GPT and DALL-E. In addition, several presets and profiles have been developed to improve your workflow. At <a href="https://chatai.haozheli.com">AI on Haozheli.com</a>, you can easily access to openAI service from anywhere of the world, with the latest GPT-4 and GPT-3.5 Turbo Model. This project is powered by <a href="https://openai.com">OpenAI</a>, <a href="https://github.com/ourongxing/chatgpt-vercel">ChatGPT Vercel</a> and <a href="https://github.com/pengzhile/pandora">Pandora</a>.</p>
+            <p><a href="https://ai.haozheli.com" target="_blank">AI on Haozheli.com</a> integrates all the future AI technology in a single platform, including GPT and DALL-E. In addition, several presets and profiles have been developed to improve your workflow. At <a href="https://chatai.haozheli.com" target="_blank">AI on Haozheli.com</a>, you can easily access to openAI service from anywhere of the world, with the latest GPT-4 and GPT-3.5 Turbo Model. This project is powered by <a href="https://openai.com" target="_blank">OpenAI</a>, <a href="https://github.com/ourongxing/chatgpt-vercel" target="_blank">ChatGPT Vercel</a> and <a href="https://github.com/pengzhile/pandora" target="_blank">Pandora</a>.</p>
           </div>
 
         </div>
