--- a/portfolio-ai.html
+++ b/portfolio-ai.html
@@ -7,7 +7,7 @@
 
   <title>AI on Haozheli.com</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="ai, haozheli" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
