--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
           <div class="loading">Loading</div>
           <div class="error-message"></div>
         </div>
-        <div class="text-center"><button type="submit" onclick="validateForm(event)">Send Message</button></div>
+        <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
 
     </div>
