--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         </div>
       </div>
 
-      <form id="contact-form" action="https://formspree.io/f/mzbqbwod" method="post" role="form" class="php-email-form mt-4">
+      <form action="https://formspree.io/f/mzbqbwod" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -695,11 +695,12 @@
           <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
         </div>
         <div class="form-group mt-3">
-          <textarea id="message" class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
         <div class="my-3">
           <div class="loading">Loading</div>
           <div class="error-message"></div>
+          <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
