--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Haozhe Li</title>
-  <meta content="haozheli's personal website" name="description">
-  <meta content="haozheli, haozhe li, lihaozhe, 李浩哲" name="keywords">
+  <title>Haozhe Li - Website</title>
+  <meta content="Haozheli's personal website, my bio and works" name="description">
+  <meta content="haozheli, Haozhe Li, 李浩哲, lihaozhe, Personal Website" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
