--- a/detect/index.html
+++ b/detect/index.html
@@ -167,6 +167,7 @@ return false;
                 <h4>Fingerprints of text 2:</h4>
                 <p id="fg2">The fingerprints preview of the second text.</p>
               </div>
+              <a href="https://www.haozheli.com" target="_blank">Copyright Haozhe Li 2023</a>
             </div>
           </div>
           <!-- //contact address -->
