--- a/detect/zh.html
+++ b/detect/zh.html
@@ -148,7 +148,7 @@ return false;
           <!-- contact form -->
           <div class="contacts12-main">
             <h3 class="title-main-cont">相似性检测器</h3>
-            <p class="sub-title-cont">这是一款基于 WINNOWING 算法的简单文本相似性检测器。检测过程通过 JavaScript 在前端进行。本网站不存储任何记录或数据。请随意使用！</p>
+            <p class="sub-title-cont">这是一款基于 WINNOWING 算法的简单文本相似性检测器。检测过程通过 JavaScript 在前端进行。本网站不存储任何记录或数据。请放心使用！</p>
             <a href="index.html">English</a> | 中文 | <a href="ja.html">日本語</a>
             <textarea id="text1" rows="10" cols="200" placeholder="在此输入您的第一个文本"></textarea>
             <textarea id="text2" rows="10" cols="200" placeholder="在此输入您的第二个文本"></textarea>
