--- a/detect/ja.html
+++ b/detect/ja.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>相似性检测器</title>
+  <title>類似性検出器</title>
   <link rel="stylesheet" href="css/style.css">
 
   <script>
@@ -147,14 +147,14 @@ return false;
         <div class="d-grid cont-main-top">
           <!-- contact form -->
           <div class="contacts12-main">
-            <h3 class="title-main-cont">相似性检测器</h3>
-            <p class="sub-title-cont">这是一款基于 WINNOWING 算法的简单文本相似性检测器。检测过程通过 JavaScript 在前端进行。本网站不存储任何记录或数据。请放心使用！</p>
-            <a href="index.html">English</a> | 中文 | <a href="ja.html">日本語</a>
-            <textarea id="text1" rows="10" cols="200" placeholder="在此输入您的第一个文本"></textarea>
-            <textarea id="text2" rows="10" cols="200" placeholder="在此输入您的第二个文本"></textarea>
+            <h3 class="title-main-cont">類似性検出器</h3>
+            <p class="sub-title-cont">これはWINNOWINGアルゴリズムに基づいたシンプルなテキスト類似性検出器です。検出処理はJavaScriptを介してフロントエンドで実行されます。このサイトに記録やデータが保存されることはありません。ご自由にお使いください！</p>
+            <a href="index.html">English</a> | <a href="zh.html">中文</a> | 日本語
+            <textarea id="text1" rows="10" cols="200" placeholder="最初のテキストをここに入力"></textarea>
+            <textarea id="text2" rows="10" cols="200" placeholder="2番目のテキストをここに入力"></textarea>
 
             <div class="text-right">
-              <button onclick="runPlagiarismDetection()" class="btn btn-contact">开始检测</button>
+              <button onclick="runPlagiarismDetection()" class="btn btn-contact">テスト開始</button>
             </div>
           </div>
           <!-- //contact form -->
@@ -162,23 +162,23 @@ return false;
           <div class="contact">
             <div class="cont-subs">
               <div class="cont-add">
-                <h1>结果：</h1>
+                <h1>結果</h1>
               </div>
               <div class="cont-add">
-                <h4>相似性</h4>
-                <p id="result">两个文本之间的相似度。这将产生两种结果：高或低。</p>
+                <h4>類似性：</h4>
+                <p id="result">2つのテキストの類似度。これは、高いか低いかの2つの結果を生成します。</p>
               </div>
               <div class="cont-add">
-                <h4>窗口大小：</h4>
-                <p id="windowsize">用于检测的窗口大小：会是一个1到100以内的数字。</p>
+                <h4>窓の大きさ：</h4>
+                <p id="windowsize">検出のためのウィンドウサイズ：1から100までの数値を指定する。</p>
               </div>
               <div class="cont-add">
-                <h4>文本指纹 1：</h4>
-                <p id="fg1">第一个文本的指纹预览：会是一个哈希值列表。</p>
+                <h4>テキストの指紋 1：</h4>
+                <p id="fg1">最初のテキストのフィンガープリント・プレビュー：ハッシュのリストになる。</p>
               </div>
               <div class="cont-add">
-                <h4>文本指纹 2：</h4>
-                <p id="fg2">第二个文本的指纹预览：会是一个哈希值列表。</p>
+                <h4>テキストの指紋 2：</h4>
+                <p id="fg2">2番目のテキストのフィンガープリント・プレビュー：ハッシュのリストになる。</p>
               </div>
               <a href="https://www.haozheli.com" target="_blank">Copyright Haozhe Li 2023</a>
             </div>
