--- a/index.html
+++ b/index.html
@@ -481,6 +481,18 @@
       </div>
 
       <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/detect-preview3.webp" class="img-fluid" alt="poster">
+            <div class="portfolio-info">
+              <h4>Similarity Detector</h4>
+              <p>Coding, Design</p>
+              <div class="portfolio-links">
+                <a href="portfolio-detect.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding">
           <div class="portfolio-wrap">
@@ -523,7 +535,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/ai-preview2.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/ai-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>AI on Haozheli.com</h4>
               <p>Coding, Design</p>
