--- a/portfolio-detect.html
+++ b/portfolio-detect.html
@@ -54,15 +54,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/detect-preview2.webp" width="720px" alt="poster">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/detect-preview2.webp" width="720px" alt="poster">
-                </div>
-
-                <div class="swiper-slide">
                   <img src="assets/img/portfolio/detect-preview1.webp" width="720px" alt="poster">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/detect-preview2.webp" width="720px" alt="poster">
                 </div>
 
               </div>
@@ -80,7 +76,7 @@
               <li><strong>More Info</strong>: <a href="https://haozheli.notion.site/Using-WINNOWING-Algorithm-to-detect-text-similarity-6a7648cfd3df4dcfac6fb2150e780c02?pvs=4" target="_blank">Read here</a></li>
             </ul>
 
-            <p><a href="https://ai.haozheli.com" target="_blank">Similarity Detector</a> is a simple Text Similarity Detector that based on the WINNOWING Algorithm. The detection gets results by comparing the fingerprints of the text using javascript on the front-end.</p>
+            <p><a href="https://detect.haozheli.com" target="_blank">Similarity Detector</a> is a simple Text Similarity Detector that based on the WINNOWING Algorithm. The detection gets results by comparing the fingerprints of the text using javascript on the front-end.</p>
           </div>
 
         </div>
