--- a/portfolio-pictures.html
+++ b/portfolio-pictures.html
@@ -98,7 +98,7 @@
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     <a id="SwitchLanguage"></a><br>
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and deployed on <a href="https://vercel.com/">Vercel</a>
+    &copy 2023 <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
