--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span>Student</span>, <span>Developer</span>, <span>Musician</span> and <span> Filmmaker</span></h2>
-
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
@@ -90,6 +89,7 @@
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="https://cn.haozheli.com">中文🇨🇳</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -725,8 +725,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    <a id="SwitchLanguage"></a><br>
-    &copy 2023 <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
@@ -737,16 +736,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-  <!-- ConveyThis code -->
-  <script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
-  <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function(e) {
-      ConveyThis_Initializer.init({
-        api_key: "pub_f64dd0a78052a2fdafdd344791885c54"
-      });
-    });
-  </script>
-  <!-- End ConveyThis code -->
+  <!-- REMOVE ConveyThis code -->
 
   <!-- Pop up weixin QR code section-->
   <script>
