--- a/portfolio-vlog.html
+++ b/portfolio-vlog.html
@@ -97,7 +97,7 @@
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     <a id="SwitchLanguage"></a><br>
-    &copy 2023 <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
@@ -108,16 +108,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-  <!-- ConveyThis code -->
-  <script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
-  <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function(e) {
-      ConveyThis_Initializer.init({
-        api_key: "pub_f64dd0a78052a2fdafdd344791885c54"
-      });
-    });
-  </script>
-  <!-- End ConveyThis code -->
+  <!-- REMOVE ConveyThis code -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
