--- a/index.html
+++ b/index.html
@@ -362,13 +362,12 @@
             <h4>Haozhe Li</h4>
             <p>
             <ul>
-              <li>Skilled in embracing essential skills in programming, filming, and music production.</li>
-              <li>Proficient in object-oriented programming languages such as Java, C++, and web development involving HTML.</li>
-              <li>Experienced in machine learning using Python.</li>
-              <li>Proficient in DSP in Pure Data and Max.</li>
+              <li>Able to work on object-oriented programming languages such as Java, C++, and web development involving HTML.</li>
+              <li>Basic knowledge in Machine Learning and Data Science using Python.</li>
+              <li>Able to parse and analyse music score using programming language.</li>
+              <li>Currently learning DSP with Pure Data and Max.</li>
               <li>Built and maintained personal website at haozheli.com and studio's website welogstudio.com.</li>
               <li>Strong understanding of Music Theory and Musicianship.</li>
-              <li>Proficient in parsing and analysing music score using programming language.</li>
               <li>Proficient in using software applications such as Davinci Resolve, Logic Pro, and Photoshop for video, music production, and photography.</li>
               <li>Certified editor and color grader with Davinci Resolve by BMD</li>
               <li>Accomplished musician with 11 years of experience as principal cellist in a symphony orchestra.</li>
