--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
-          <li><a class="nav-link" href="https://cn.haozheli.com">中文🇨🇳</a></li>
+          <li><a class="nav-link" href="https://cn.haozheli.com">简体中文</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
