--- a/index.html
+++ b/index.html
@@ -239,23 +239,23 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">C++ <i class="val">70%</i></span>
+            <span class="skill">C++ <i class="val">50%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Java <i class="val">70%</i></span>
+            <span class="skill">Java <i class="val">50%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Python <i class="val">90%</i></span>
+            <span class="skill">Python <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -285,9 +285,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Digital Signal Processing<i class="val">70%</i></span>
+            <span class="skill">Digital Signal Processing<i class="val">20%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -334,7 +334,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3>Jogging</h3>
+            <h3>Running</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -359,7 +359,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3>Riding</h3>
+            <h3>Marathron</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
