--- a/run.html
+++ b/run.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Running - Haozhe Li</title>
+  <title>RUN - Haozhe Li</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -68,10 +68,9 @@
             <h3>Running Facts:</h3>
             <ul>
               <li><strong>5K PB</strong>: 21:43</li>
-              <li><strong>10K PB</strong>: 47:43</li>
-              <li><strong>Half Marathron Est</strong>: 1:43:00 (Given by <a href="https://stryd.com" target="_blank">Stryd</a>)</li>
-              <li><strong>Marathron Est</strong>: 3:40:00 (<a href="https://stryd.com" target="_blank">Stryd</a>)</li>
-              <li><strong>Race</strong>: <a href="/assets/files/runtoremember.pdf" target="_blank">Run To Remember 5K</a> (Urbana, IL), Future's So Bright 5K (Champaign, IL)</li>
+              <li><strong>10K PB</strong>: 45:39</li>
+              <li><strong>Next Goal</strong>: Half Marathron at 1:30! </li>
+              <li><strong>Race</strong>: Run to Remember 5K (Urbana, IL), Future's So Bright 5K (Champaign, IL), Aruna Run 5K (Urbana, IL), Rattlesnake 10K (Urbana, IL)</li>
               <li><strong>Start running at</strong>: July, 2023</li>
               
             </ul>
