--- a/portfolio-run.html
+++ b/portfolio-run.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>RUN - Haozhe Li</title>
+  <title>RUN with Haozhe</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="detect, similarity" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -49,25 +48,17 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">About My Running</h2>
+            <h2 class="portfolio-title">RUN with Haozhe</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/running-preview1.webp" width="640px" alt="poster">
+                  <img src="assets/img/portfolio/runpage-preview1.webp" width="720px" alt="poster">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/running-preview2.webp" width="640px" alt="poster">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/running-preview3.webp" width="640px" alt="poster">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/running-preview4.webp" width="640px" alt="poster">
+                  <img src="assets/img/portfolio/runpage-preview2.webp" width="720px" alt="poster">
                 </div>
 
               </div>
@@ -77,20 +68,13 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>Running Facts:</h3>
+            <h3>Project information</h3>
             <ul>
-              <li><strong>5K PB</strong>: 21:43</li>
-              <li><strong>10K PB</strong>: 45:39</li>
-              <li><strong>Next Goal</strong>: Half Marathron at 1:30! </li>
-              <li><strong>Race</strong>: <br>Run to Remember 5K (Urbana, IL), <br>Future's So Bright 5K (Champaign, IL), <br>Aruna Run 5K (Urbana, IL), <br>Rattlesnake 10K (Urbana, IL)</li>
-              <li><strong>Start running at</strong>: July, 2023</li>
-              <li><strong>Running Page</strong>: <a href="https://run.haozheli.com">RUN with Haozhe: run.haozheli.com</a></li>
-              <li><strong>Follow me on</strong>: <a href="https://www.strava.com/athletes/haozheli">Strava</a></li>
+              <li><strong>Category</strong>: Website Design</li>
+              <li><strong>Project date</strong>: In Progress</li>
+              <li><strong>Project URL</strong>: <a href="https://run.haozheli.com" target="_blank">run.haozheli.com</a></li>
+              <li><strong>More Info</strong>: I've been record my running/walking in the past two years. Powered by <a href="https://yihong.run" target="_blank">Yihong</a>, I deploy this running page website on Haozheli.com. My running page will automatically pull run data from strava then draw the path on canvas.</li>
             </ul>
-
-            <p>
-              
-            </p>
           </div>
 
         </div>
