--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/runpage-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
-              <h4>RUN with Haozhe</h4>
+              <h4>RUN</h4>
               <p>Coding, Design</p>
               <div class="portfolio-links">
                 <a href="portfolio-run.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
