--- a/portfolio-detect.html
+++ b/portfolio-detect.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Similarity Detector</title>
+  <title>Similarity Detector - Haozhe Li</title>
   <meta content="" name="description">
   <meta content="detect, similarity" name="keywords">
 
