--- a/portfolio-run.html
+++ b/portfolio-run.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>RUN with Haozhe</title>
+  <title>RUN - Haozhe Li</title>
   <meta content="" name="description">
   <meta content="detect, similarity" name="keywords">
 
@@ -71,7 +71,7 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Website Design</li>
-              <li><strong>Project date</strong>: In Progress</li>
+              <li><strong>Project date</strong>: Nov 17, 2023</li>
               <li><strong>Project URL</strong>: <a href="https://run.haozheli.com" target="_blank">run.haozheli.com</a></li>
               <li><strong>More Info</strong>: I've been record my running/walking in the past two years. Powered by <a href="https://yihong.run" target="_blank">Yihong</a>, I deploy this running page website on Haozheli.com. My running page will automatically pull run data from strava then draw the path on canvas.</li>
             </ul>
