update vercel analysis
Update vercel analysis

Added the Vercel Analysis script to the index.html file. This script
enables tracking and analytics for the website.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
   </style>
   <!-- End of Weixin Popup style -->
 
+  <!-- Vercel Analysis -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
+  <!-- End of Vercel Analysis-->
+
   <!-- =======================================================
   * Template Name: Personal
   * Updated: May 30 2023 with Bootstrap v5.3.0
