--- a/index.html
+++ b/index.html
@@ -397,12 +397,14 @@
 
       <div class="row">
         <div class="col-lg-6">
+          <p>*Resume information on the website may not up-to-date, please refer to the pdf version.</p>
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Haozhe Li</h4>
             <p>
             <ul>
-              <li>Able to work on object-oriented programming languages such as Java, C++, and web development involving HTML.</li>
+              <li>Able to work on object-oriented programming languages such as Java, C++.</li>
+              <li>Knowledge of front-end and back-end development using HTML, JavaScript, and Next.js.</li>
               <li>Basic knowledge in Machine Learning and Data Science using Python.</li>
               <li>Able to parse and analyse music score using programming language.</li>
               <li>Currently learning DSP with Pure Data and Max.</li>
