--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <h1><a href="index.html">Haozhe Li</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Student</span>, <span>Developer</span>, <span>Musician</span> and <span> Filmmaker</span></h2>
+      <h2>I'm a passionate <span>Student</span>, <span>Developer</span>, <span>Runner</span> and <span> Filmmaker</span></h2>
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
