--- a/portfolio-ai.html
+++ b/portfolio-ai.html
@@ -73,7 +73,7 @@
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
               <li><strong>Project URL</strong>: <a href="https://ai.haozheli.com" target="_blank">ai.haozheli.com</a></li>
-              <li><strong>User Guide</strong>: <a href="/docs/index.html" target="_blank">Read here</a></li>
+              <li><strong>User Guide</strong>: <a href="https://blog.haozheli.com/#/aihaozheli" target="_blank">Read here</a></li>
             </ul>
 
             <p><a href="https://ai.haozheli.com" target="_blank">AI on Haozheli.com</a> integrates all the future AI technology in a single platform, including GPT and DALL-E. In addition, several presets and profiles have been developed to improve your workflow. At <a href="https://chatai.haozheli.com" target="_blank">AI on Haozheli.com</a>, you can easily access to openAI service from anywhere of the world, with the latest GPT-4 and GPT-3.5 Turbo Model. This project is powered by <a href="https://openai.com" target="_blank">OpenAI</a>, <a href="https://github.com/ourongxing/chatgpt-vercel" target="_blank">ChatGPT Vercel</a> and <a href="https://github.com/pengzhile/pandora" target="_blank">Pandora</a>.</p>
