--- a/portfolio-detect.html
+++ b/portfolio-detect.html
@@ -73,7 +73,7 @@
               <li><strong>Category</strong>: Website Design, Algorithm</li>
               <li><strong>Project date</strong>: In Progress</li>
               <li><strong>Project URL</strong>: <a href="https://detect.haozheli.com" target="_blank">detect.haozheli.com</a></li>
-              <li><strong>More Info</strong>: <a href="https://haozheli.notion.site/Using-WINNOWING-Algorithm-to-detect-text-similarity-6a7648cfd3df4dcfac6fb2150e780c02?pvs=4" target="_blank">Read here</a></li>
+              <li><strong>More Info</strong>: <a href="https://blog.haozheli.com/#/winnowing" target="_blank">Read here</a></li>
             </ul>
 
             <p><a href="https://detect.haozheli.com" target="_blank">Similarity Detector</a> is a simple Text Similarity Detector that based on the WINNOWING Algorithm. The detection gets results by comparing the fingerprints of the text using javascript on the front-end.</p>
