--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span><script>document.write(new Date().getFullYear() - 2004);</script></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science (IP)</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:hi@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">hi@haozheli.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:mail@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">mail@haozheli.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Urbana, IL</span></li>
               </ul>
             </div>
@@ -728,7 +728,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <a href="mailto:hi@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">hi@haozheli.com</a>
+            <a href="mailto:mail@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">mail@haozheli.com</a>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
