--- a/index.html
+++ b/index.html
@@ -378,119 +378,39 @@
   </section><!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
-  <section id="resume" class="resume">
+  <!-- ======= Contact Section ======= -->
+  <section id="resume" class="contact">
     <div class="container">
 
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <a href="resume/Resume.html">See More in PDF</a>
       </div>
 
-      <div class="row">
-        <div class="col-lg-6">
-          <p>*Resume information on the website may not up-to-date, please refer to the pdf version.</p>
-          <h3 class="resume-title">Summary</h3>
-          <div class="resume-item pb-0">
-            <h4>Haozhe Li</h4>
-            <p>
-            <ul>
-              <li>Able to work on object-oriented programming languages such as Java, C++.</li>
-              <li>Knowledge of front-end and back-end development using HTML, JavaScript, and Next.js.</li>
-              <li>Basic knowledge in Machine Learning and Data Science using Python.</li>
-              <li>Able to parse and analyse music score using programming language.</li>
-              <li>Currently learning DSP with Pure Data and Max.</li>
-              <li>Built and maintained personal website at haozheli.com and studio's website welogstudio.com.</li>
-              <li>Strong understanding of Music Theory and Musicianship.</li>
-              <li>Proficient in using software applications such as Davinci Resolve, Logic Pro, and Photoshop for video, music production, and photography.</li>
-              <li>Certified editor and color grader with Davinci Resolve by BMD</li>
-              <li>Accomplished musician with 11 years of experience as principal cellist in a symphony orchestra.</li>
-              <li>A dedicated video blogger with a following of 10K.</li>
-            </ul>
-            </p>
-          </div>
+      <div class="row mt-2">
 
-          <h3 class="resume-title">Education</h3>
-          <div class="resume-item">
-            <h4>BS, Computer Science and Music</h4>
-            <h5>2022 - </h5>
-            <p><em>University of Illinois at Urbana - Champaigns, IL</em></p>
-            <ul>
-              <li>Currently completing courses in computer science, music theory and technology, musicianship, and computational music.</li>
-              <li>Prominent coursework: CS 124 Machine Project, CS 128 Machine Problem, MUS 105 Machine Project</li>
-              <li>GPA 3.98</li>
-              <li>UIUC Dean's List Fall 2022 and Spring 2023</li>
-            </ul>
-          </div>
-
-          <div class="resume-item">
-            <h4>High School</h4>
-            <h5>2019 - 2022</h5>
-            <p><em>Beijing National Day School, Beijing</em></p>
-            <ul>
-              <li>Graduated summa cum laude—3.9 GPA</li>
-              <li>Volunteered on creating and revising learning materials in ZNotes</li>
-              <li>Completed courses in Alevel Math, Physics and Economics with grade A</li>
-              <li>Played the position of principal Cellist in school orchestra from 2016 to 2021</li>
-            </ul>
+        <div class="col-md-6 d-flex align-items-stretch">
+          <div class="info-box">
+            <h3>English</h3>
+            <p>Please choose your format: </p>
+            <p><a href="resume/Resume.html">HTML</a></p>
+            <p><a href="resume/Resume.pdf">PDF</a></p>
+            <p><a href="resume/Resume.md">MarkDown</a></p>
           </div>
         </div>
-        <!--Experience-->
-        <div class="col-lg-6">
-          <h3 class="resume-title">Experience</h3>
-          <div class="resume-item">
-            <h4>Course Assistant </h4>
-            <h5>02/2023 - 05/2023</h5>
-            <p><em>Urbana, IL</em></p>
-            <p>
-            <ul>
-              <li>Course Assistant of CS 124. I regularly post my work and practices, and respond to questions in the help section, in order to continuously demonstrate my progress and knowledge.</li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>Contributor</h4>
-            <h5>12/2021 - 04/2022</h5>
-            <p><em>Online</em></p>
-            <p>
-            <ul>
-              <li>Created and revised revision material for the ZNotes to help more students to prepare Alevel Physics</li>
-              <li>Had written chapters on A2 astrophysics, quantum physics, and atomic physics, and revised electromagnetism as well as thermodynamics</li>
-            </ul>
-            </p>
-          </div>
-          <!--Other-->
 
-          <h3 class="resume-title">Others</h3>
-          <div class="resume-item">
-            <h4>Skills</h4>
-            <p>
-            <ul>
-              <li>Programming, Filming, Music Production, Photography, Machine Learning, Web Design</li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>Languages</h4>
-            <p>
-            <ul>
-              <li>English, Chinese (Mandarin)</li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>Certificates</h4>
-            <p>
-            <ul>
-              <li>Crash Course on Python, Using Python to interact with Operating System, Supervised Machine Learning: Regression and Classification, Certified editor and color grader with Davinci Resolve by BMD</li>
-            </ul>
-            </p>
+        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+          <div class="info-box">
+            <h3>中文</h3>
+            <p>请选择格式：</p>
+            <p><a href="resume/Resume-zh.html">HTML</a></p>
+            <p><a href="resume/Resume-zh.pdf">PDF</a></p>
+            <p><a href="resume/Resume-zh.md">MarkDown</a></p>
           </div>
         </div>
-      </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section>
 
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
