--- a/index.html
+++ b/index.html
@@ -648,14 +648,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <a href="mailto:mail@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">mail@haozheli.com</a>
+            <p><a href="mailto:mail@haozheli.com">mail@haozheli.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <a href="sms:+1217 693 8436">+1 217 693 8436</a>
+            <p><a href="sms:+1217 693 8436">+1 217 693 8436</a></p>
           </div>
         </div>
       </div>
