--- a/portfolio-blog.html
+++ b/portfolio-blog.html
@@ -80,7 +80,7 @@
             </ul>
 
             <p>
-              This is my blog website! I will post my journals, as well as the transcript of my video.
+              This is my blog website! I will post my journals, as well as the transcript of my video. The blog is written with <a href="https://en.wikipedia.org/wiki/Markdown" target="_blank">markdown</a> and is converted into webpage by <a href="https://docsify.js.org" target="_blank">docsify</a>
             </p>
           </div>
 
