--- a/index.html
+++ b/index.html
@@ -694,6 +694,8 @@
     &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
+  <div id="google_translate_element"></div>
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -729,6 +731,15 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Google Translate -->
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+    
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 
