update google trasnslate

--- a/index.html
+++ b/index.html
@@ -687,12 +687,13 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
+    <!-- Google Translate Plugin -->
+    <div id="google_translate_element"></div>
     <!-- All the links in the footer should remain intact. -->
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     &copy <script>document.write(new Date().getFullYear());</script> <a href="https://www.haozheli.com" target="_blank">Haozhe Li</a>. All rights reserved | Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    <div id="google_translate_element"></div>
   </div>
 
 
