--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="https://www.haozheli.cn">简体中文</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
         
